--- a/request.html
+++ b/request.html
@@ -44,11 +44,11 @@
         <div>
             <p>Estimate tile cost for your project</p>
             <div class="inputDivs">
-                <label for="length">Enter Length (Round to highest number):</label>
+                <label for="length">Enter Length:</label>
                 <input type="number" id="length" name="length" min="1">
             </div>
             <div class="inputDivs">
-                <label for="width">Enter Width (Round to highest number):</label>
+                <label for="width">Enter Width:</label>
                 <input type="number" id="width" name="width" min="1">
             </div>
             <div class="inputDivs">
