--- a/portofolio.html
+++ b/portofolio.html
@@ -18,50 +18,50 @@
     
     <div class="mainPageImg">
         <div class="border_right">
-            <img src="images/bathroom_main.jpg" style="height: 600px; width: 100%"/>
+            <img src="images/bathroom_main.jpg" style="width: 100%"/>
         </div>
         <div class="border_left">
-            <img src="images/bath22.jpg" style="height: 600px; width: 100%"/>
+            <img src="images/bath22.jpg" style="width: 100%"/>
         </div>
     </div>
 
     <div class="mainPageImg"> 
-        <img src="images/main_page.png" style="height: 600px; width: 100%"/>
+        <img src="images/main_page.png" style="width: 100%"/>
     </div>
 
     <div class="mainPageImg">
         <div class="border_right">
-            <img src="images/bath19.jpg" style="height: 600px; width: 100%"/>
+            <img src="images/bath14.jpg" style="width: 100%"/>
         </div>
         <div class="border_left">
-            <img src="images/bath6.jpg" style="height: 600px; width: 100%"/>
+            <img src="images/bath6.jpg" style="width: 100%"/>
         </div>
     </div>
 
             turi
     <div class="mainPageImg"> 
-        <img src="images/bath2.jpg" style="height: 600px; width: 100%"/>
+        <img src="images/bath2.jpg" style="width: 100%"/>
     </div>
 
     <div class="mainPageImg">
         <div class="border_right">
-            <img src="images/bath14.jpg" style="height: 600px; width: 100%"/>
+            <img src="images/bath19.jpg" style="width: 100%"/>
         </div>
         <div class="border_left">
-            <img src="images/bath7.jpg" style="height: 600px; width: 100%"/>
+            <img src="images/bath7.jpg" style="width: 100%"/>
         </div>
     </div>
 
     <div class="mainPageImg"> 
-        <img src="images/bath11.jpg" style="height: 600px; width: 100%"/>
+        <img src="images/bath11.jpg" style="width: 100%"/>
     </div>
 
     <div class="mainPageImg">
         <div class="border_right">
-            <img src="images/bath24.jpg" style="height: 600px; width: 100%"/>
+            <img src="images/bath24.jpg" style="width: 100%"/>
         </div>
         <div class="border_left">
-            <img src="images/bath25.jpg" style="height: 600px; width: 100%"/>
+            <img src="images/bath25.jpg" style="width: 100%"/>
         </div>
     </div>
 
@@ -69,15 +69,15 @@
     turi3
 
     <div class="mainPageImg"> 
-        <img src="images/vanity1.jpg" style="height: 600px; width: 100%"/>
+        <img src="images/vanity1.jpg" style="width: 100%"/>
     </div>
 
     <div class="mainPageImg">
         <div class="border_right">
-            <img src="images/bath35.jpg" style="height: 600px; width: 100%"/>
+            <img src="images/bath35.jpg" style="hwidth: 100%"/>
         </div>
         <div class="border_left">
-            <img src="images/bath5.jpg" style="height: 600px; width: 100%"/>
+            <img src="images/bath5.jpg" style="width: 100%"/>
         </div>
     </div>
 
