--- a/kitchen.html
+++ b/kitchen.html
@@ -65,7 +65,7 @@
     </div>
    
     <div class="contentDiv">
-        <a href="https://www.facebook.com" target="G&G Tile&Home Improvement">Follow Us On Facebook</a>
+        <a href="https://www.facebook.com/GG-TileHome-Improvement-267406337039152/" target="_blank">Follow Us On Facebook</a>
     </div>
 
     <footer>
