--- a/request.html
+++ b/request.html
@@ -93,7 +93,7 @@
     <br/>
 
     <div class="contentDiv">
-        <a href="https://www.facebook.com" target="_blank">Follow Us On Facebook</a>
+        <a href="https://www.facebook.com/GG-TileHome-Improvement-267406337039152/" target="_blank">Follow Us On Facebook</a>
     </div>
     
     <footer>
