--- a/bathroom.html
+++ b/bathroom.html
@@ -63,6 +63,7 @@
         <div class="itemActions">
             <p>Shower Door</p>
             <p>Costumized Shower Floor</p>
+            <p>Paint</p>
         </div> 
     </div>
 
