--- a/bathroom.html
+++ b/bathroom.html
@@ -31,7 +31,7 @@
             <div class="mainContentDiv2">
 
              <p>We will provide you with a high quality of service to archive your goal. 
-                Whether it is a small or a master bathroom 
+                Whether it is a small or a master bathroom. 
                 We take care, from demolition to the last final touch of the paintbrush.
     
                 We pay attention to any detail as that's where the secrets of any project start from.</p>
