--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="mainContentDiv">
         <p>Customer satisfaction is our priority. To ensure customer satisfaction,
             we take any project seriously. 
-            G&G tile and remodeling have been working in the Boston
+            G&G tile And Home Improvement.Inc have been working in the Boston
             area for more than 15 years, specialized in tiles and many other home improvement areas. 
             We provide ceramic, porcelain, glass, marble, natural stone installation for any of 
             your home improvement projects.</p>
