--- a/bathroom.html
+++ b/bathroom.html
@@ -25,7 +25,7 @@
             </div>
 
             <div class="mainPageImg"> 
-                <img src="images/main_page.png" style="height: 600px; width: 100%"/>
+                <img src="images/vanity1.jpg" style="height: 600px; width: 100%"/>
             </div>
             
             <div class="mainContentDiv2">
@@ -38,10 +38,10 @@
     </div>
     <div class="mainPageImg">
         <div class="border_right">
-            <img src="images/bathroom_main.jpg" style="height: 600px; width: 100%"/>
+            <img src="images/bath9.jpg" style="height: 600px; width: 100%"/>
         </div>
         <div class="border_left">
-            <img src="images/sink_main.jpg" style="height: 600px; width: 100%"/>
+            <img src="images/bath18.jpg" style="height: 600px; width: 100%"/>
         </div>
     </div>
 
