--- a/kitchen.html
+++ b/kitchen.html
@@ -34,7 +34,7 @@
 
     <div class="mainPageImg">
         <div class="border_right">
-            <img src="images/kitchen1.jpg" style="height: 600px; width: 100%"/>
+            <img src="images/kitchen_one.jpg" style="height: 600px; width: 100%"/>
         </div>
         <div class="border_left">
             <img src="images/kitchen5.jpg" style="height: 600px; width: 100%"/>
