--- a/request.html
+++ b/request.html
@@ -37,7 +37,7 @@
     </div>
 
     <div class="mainPageImg"> 
-        <img src="images/main_page.png" style="height: 600px; width: 100%"/>
+        <img src="images/kitchen_one.jpg" style="height: 600px; width: 100%"/>
     </div>
 
     <div class="contactUsMainDiv calculationDiv">
