--- a/portofolio.html
+++ b/portofolio.html
@@ -80,6 +80,19 @@
             <img src="images/bath5.jpg" style="width: 100%"/>
         </div>
     </div>
+    
+     <div class="mainPageImg"> 
+        <img src="images/bath54.jpg" style="width: 100%"/>
+    </div>
+
+    <div class="mainPageImg">
+        <div class="border_right">
+            <img src="images/bath50.jpg" style="hwidth: 100%"/>
+        </div>
+        <div class="border_left">
+            <img src="images/bath51.jpg" style="width: 100%"/>
+        </div>
+    </div>
 
     <div class="contentDiv">
         <a href="https://www.facebook.com/GG-TileHome-Improvement-267406337039152/" target="_blank">Follow Us On Facebook</a>
