--- a/portofolio.html
+++ b/portofolio.html
@@ -90,7 +90,7 @@
             <img src="images/bath50.jpg" style="hwidth: 100%"/>
         </div>
         <div class="border_left">
-            <img src="images/bath51.jpg" style="width: 100%"/>
+            <img src="images/kitchen_one.jpg" style="width: 100%"/>
         </div>
     </div>
 
