--- a/kitchen.html
+++ b/kitchen.html
@@ -18,7 +18,7 @@
     </ul>
 
     <div class="mainPageImg"> 
-        <img src="images/main_page.png" style="height: 600px; width: 100%"/>
+        <img src="images/backspalsh1.jpg" style="height: 600px; width: 100%"/>
     </div>
 
     <div class="mainContentDiv">
