--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </ul>
 
     <div class="mainPageImg"> 
-        <img src="images/main_page.png" style="height: 600px; width: 100%"/>
+        <img src="images/bath11.jpg" style="height: 600px; width: 100%"/>
     </div>
 
     <div class="mainContentDiv">
