--- a/about.html
+++ b/about.html
@@ -39,10 +39,10 @@
 
     <div class="mainPageImg">
         <div class="border_right">
-            <img src="images/bathroom_main.jpg" style="height: 600px; width: 100%"/>
+            <img src="images/bath16.jpg" style="height: 600px; width: 100%"/>
         </div>
         <div class="border_left">
-            <img src="images/sink_main.jpg" style="height: 600px; width: 100%"/>
+            <img src="images/bath18.jpg" style="height: 600px; width: 100%"/>
         </div>
     </div>
         
