--- a/bathroom.html
+++ b/bathroom.html
@@ -11,6 +11,7 @@
         <li><a href="index.html"><span>Home</span></a></li>
         <li><a href="kitchen.html"><span>Kitchen</span></a></li>
         <li><a class="active" href="bathroom.html"><span>Bathroom</span></a></li>
+        <li><a href="hallway.html"><span>Hallway</span></a></li>
         <li><a href="portofolio.html"><span>Portfolio</span></a></li>
         <li><a href="request.html"><span>Request an estimate</span></a></li>
         <li><a href="about.html"><span>About Us</span></a></li>
