--- a/kitchen.html
+++ b/kitchen.html
@@ -12,6 +12,7 @@
         <li><a href="index.html"><span>Home</span></a></li>
         <li><a class="active" href="kitchen.html"><span>Kitchen</span></a></li>
         <li><a href="bathroom.html"><span>Bathroom</span></a></li>
+        <li><a href="hallway.html"><span>Hallway</span></a></li>
         <li><a href="portofolio.html"><span>Portfolio</span></a></li>
         <li><a href="request.html"><span>Request an estimate</span></a></li>
         <li><a href="about.html"><span>About Us</span></a></li>
