--- a/hallway.html
+++ b/hallway.html
@@ -19,7 +19,7 @@
     </ul>
 
     <div class="mainPageImg"> 
-        <img src="images/main_page.png" style="height: 600px; width: 100%"/>
+        <img src="images/hall1.jpg" style="height: 600px; width: 100%"/>
     </div>
 
     <div class="mainContentDiv">
@@ -31,10 +31,10 @@
 
     <div class="mainPageImg">
         <div class="border_right">
-            <img src="images/backspalsh1.jpg" style="height: 600px; width: 100%"/>
+            <img src="images/hall2.jpg" style="height: 600px; width: 100%"/>
         </div>
         <div class="border_left">
-            <img src="images/kitchen5.jpg" style="height: 600px; width: 100%"/>
+            <img src="images/hall3.jpg" style="height: 600px; width: 100%"/>
         </div>
     </div>
 
