--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 </head>
     
 <body>
-    <a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fartur-dr.github.io%2FG-G%2Findex.html&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false"/></a>
-    <h1 class="header">G<span class="logo">&</span>G Tile And Home Improvement</h1>
+    <a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fgngtile.github.io%2FG-G%2Findex.html&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false"/></a>
     <ul class="navBarUl">
         <li><a class="active" href="index.html"><span>Home</span></a></li>
         <li><a href="kitchen.html"><span>Kitchen</span></a></li>
