--- a/portofolio.html
+++ b/portofolio.html
@@ -62,7 +62,7 @@
             <img src="images/bath24.jpg" style="width: 100%"/>
         </div>
         <div class="border_left">
-            <img src="images/bath25.jpg" style="width: 100%"/>
+            <img src="images/bcsp.jpg" style="width: 100%"/>
         </div>
     </div>
 
